--- a/base-apparel-coming-soon/index.html
+++ b/base-apparel-coming-soon/index.html
@@ -18,10 +18,10 @@
     function validateMail(){
       var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
       if(document.getElementById('email').value.match(mailformat)){
-        document.getElementById('validity').classList.remove("alert");
-        document.getElementById('email').classList.remove("wrongInput");
-        document.getElementById('imge').classList.remove("arrow");
         document.getElementById('email').value="";
+         document.getElementById('validity').className="";
+         document.getElementById('email').className="";
+        document.getElementById('imge').className="";
       }
       else{
         document.getElementById('validity').className="alert";
